--- a/src/views/body/pet.ejs
+++ b/src/views/body/pet.ejs
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grupo Seven / Espaço pet</title>
   <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/body_pet.css">
-  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/body_pet.css">
+  <link rel="stylesheet" href="/css/footer.css">
+  <link rel="stylesheet" href="/css/menu_hamburguer.css">
 
 </head>
 
@@ -20,8 +21,8 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-          <a href="/home.html">
-              <img class="imagem_logo_img" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa" >
+          <a href="/home">
+              <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
    
@@ -39,7 +40,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="/formulario.html">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="/home/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
@@ -65,19 +66,18 @@
     <section class="segunda_cabecalho">
 
       <article class="link">
-        <i class="fa-solid fa-list"></i>
-        <p class="texto_nav"> Navegue aqui</p>
+        <a id="button_menu"> <i class="fa-solid fa-list"></i></a> <p class="texto_nav"> Navegue aqui</p>  
       </article>
 
       <article class="abas">
 
-        <a class="tagA_segundo_cabecalho" href="/variedades.html">
+        <a class="tagA_segundo_cabecalho" href="/home/variedades">
           <p class="mercado"><strong> Variedades</strong> </p>
         </a>
 
         <p class="pet" id="pag_pet"><strong>Espaço pet </strong> </p>
 
-        <a class="tagA_segundo_cabecalho" href="/farmacia.html">
+        <a class="tagA_segundo_cabecalho" href="/home/farmacia">
           <p class="farmacia"><strong>Farmácia </strong> </p>
         </a>
 
@@ -90,7 +90,39 @@
     </section>
 
   </header>
+  
+  <section class="body_menu_hamburguer" ></section>
+  <div class="menu_hamburguer" id="menu_hamburguer">
+    
+    <ul>
+        <li class="lista_label_hambuerguer">
+          Variedades
+           <ul >
+            <a href="variedades.html"> <li>Eletrônicos</li></a>
+            <a href="variedades.html"> <li>Móveis</li></a>
+            <a href="variedades.html"><li>Roupas</li></a>
+           </ul>
+        </li>
 
+        <li class="lista_label_hambuerguer" >Espaço pet
+            <ul >
+              <a href="pet.html"> <li>Gatos</li></a>
+              <a href="pet.html"><li>Cachorros</li></a>
+              <a href="pet.html"><li>Diversos</li></a> 
+            </ul>
+        </li>
+
+        <li class="lista_label_hambuerguer" >Farmácia
+            <ul >
+              <a href="farmacia.html"><li>Remédios</li></a>
+              <a href="farmacia.html"><li>Beleza</li></a>
+              <a href="farmacia.html"><li>Diversos</li></a>
+            </ul>
+        </li>
+
+    </ul>
+
+</div>
 
   <main>
     <section class="slider">
@@ -108,19 +140,19 @@
 
         <!--inicio slide imagens---------------------------------------------------------------------------------->
         <div class="slide first">
-          <img width="100%" height="500" src="imagens\carrosel-pet1.webp" alt="imagem 1">
+          <img width="100%" height="500" src="/img/carrosel-pet1.webp" alt="imagem 1">
         </div>
 
         <div class="slide">
-          <img src="imagens\carrosel-pet5.webp" alt="imagem 2">
+          <img src="/img/carrosel-pet5.webp" alt="imagem 2">
         </div>
 
         <div class="slide">
-          <img src="imagens\carrosel-pet4.webp" alt="imagem 3">
+          <img src="/img/carrosel-pet4.webp" alt="imagem 3">
         </div>
 
         <div class="slide">
-          <img src="imagens\carrosel-pet2.webp" alt="imagem 4">
+          <img src="/img/carrosel-pet2.webp" alt="imagem 4">
         </div>
         <!--fim slide imagens--------------------------------------------------------------------------------------->
 
@@ -151,7 +183,7 @@
     <section class="container">
 
       <div class="card">
-        <img id="bolsaPet" alt="" src="imagens\bolsaPet.jpg" complete="complete">
+        <img id="bolsaPet" alt="" src="/img/bolsaPet.jpg" complete="complete">
         <div class="descricao">
           <p>Bolsa pet</p>
           <P>R$ 140,00</P>
@@ -161,7 +193,7 @@
       </div>
       <div class="card">
         <div class="box-banner">
-          <img id="caminhaPet" alt="" src="imagens\caminhaPet.webp" complete="complete">
+          <img id="caminhaPet" alt="" src="/img/caminhaPet.webp" complete="complete">
           <div class="descricao">
             <p>Caminha pet</p>
             <P>R$ 190,00</P>
@@ -172,7 +204,7 @@
       </div>
       <div class="card">
         <div class="box-banner">
-          <img src="imagens\casinhaPet.jpg" complete="complete">
+          <img src="/img/casinhaPet.jpg" complete="complete">
           <div class="descricao">
             <p>Casinha pet</p>
             <P>R$ 200,00</P>
@@ -188,7 +220,7 @@
 
     <section class="container">
       <div class="card">
-        <img id="" alt="" src="imagens\tigela_gato.webp" complete="complete">
+        <img id="" alt="" src="/img/tigela_gato.webp" complete="complete">
         <div class="descricao">
           <p>Tigela para gato</p>
           <P>R$ 20,00</P>
@@ -198,7 +230,7 @@
         <button class="carrinho">Carrinho</button>
       </div>
       <div class="card">
-        <img id="" alt="" src="imagens\racao-gato.jpg" complete="complete">
+        <img id="" alt="" src="/img/racao-gato.jpg" complete="complete">
         <div class="descricao">
           <p>Ração para Gato</p>
           <P>R$ 50,00</P>
@@ -207,7 +239,7 @@
         <button class="carrinho">Carrinho</button>
       </div>
       <div class="card">
-        <img id="" alt="" src="imagens\racao-premier-caes-adultos.webp" complete="complete">
+        <img id="" alt="" src="/img/racao-premier-caes-adultos.webp" complete="complete">
         <div class="descricao">
           <p>Ração premium</p>
           <P>R$ 80,00</P>
@@ -224,78 +256,8 @@
   </main>
 
 
-
-  <footer>
-
-    <section class="footer_all">
+  <%- include("../partials/footer") %> 
   
-      <article class="imagem_logo2">
-          <a href="/home.html">
-              <img class="imagem2" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  >
-          </a>
-      </article>
-  
-    <!--Primeiro Artico---------------------------------------------------------------------------------------------->
-    <article class="lista_footer1">
-  
-        <label class="label_footer" for="">Sobre o Grupo Seven </label>
-        <ul>
-            <li type = "none">
-              <a class="lista" href="">Quem Somos </a>
-            </li>
-  
-            <li type = "none">
-              <a class="lista" class="Lista" href="">Nossas Lojas </a>
-            </li>
-  
-            <li type = "none">
-              <a class="lista" class="Lista" href="">Trabalhe Conosco </a>
-            </li>
-  
-            <li type = "none">
-              <a class="lista" href="">Dúvidas </a>
-            </li>
-        </ul>
-  
-    </article>
-    <!--Fim Primeiro Artico---------------------------------------------------------------------------------------------->
-  
-    <!--Segundo Artico---------------------------------------------------------------------------------------------->
-    <article class="lista_footer2">
-  
-      <label class="label_footer" for="">Central de Atendimento </label>
-      <ul>
-          <li type = "none">
-            <a class="lista"href="">Anucie Seu Produto Aqui </a>
-          </li>
-  
-          <li type = "none">
-            <a class="lista" href="">Política de Vendas </a>
-          </li>
-  
-          <li type = "none">
-            <a class="lista" href="">Troca e Devolução </a>
-          </li>
-  
-          <li type = "none">
-            <a class="lista" href="">Prazo e Entrega </a>
-          </li>
-      </ul>
-  
-    </article>
-  <!--Segundo Artico---------------------------------------------------------------------------------------------->
-  
-    <article class="icones_footer">
-  
-      <a href=""><i id="icone_footer_img" class="fa-brands fa-facebook"></i></a>
-      <a href=""><i id="icone_footer_img" class="fa-brands fa-instagram"></i></a>
-      <a href=""><i id="icone_footer_img" class="fa-brands fa-twitter"></i></a>
-  
-    </article>
-    
-  </section>
-  
-   </footer>
    
   
      <!--<div class="whatsapp">
@@ -304,7 +266,8 @@
     </div>-->
 
 
-
+    <script src="/js/pet.js"></script>
+    <script src="/js/menu_hamburguer.js"></script>
 
 </body>
 
