--- a/src/views/body/variedades.ejs
+++ b/src/views/body/variedades.ejs
@@ -9,8 +9,9 @@
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/body_variedades.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/body_variedades_carrossel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/body_variedades_carrossel.css">
+    <link rel="stylesheet" href="/css/menu_hamburguer.css">
 
 </head>
 
@@ -21,8 +22,8 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-          <a href="/home.html">
-              <img class="imagem_logo_img" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa" >
+          <a href="/home">
+              <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
    
@@ -40,7 +41,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="/formulario.html">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="/home/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
@@ -65,18 +66,18 @@
     <section class="segunda_cabecalho">
 
       <article class="link">
-        <i class="fa-solid fa-list"></i> <p class="texto_nav"> Navegue aqui</p> 
+        <a id="button_menu"> <i class="fa-solid fa-list"></i></a> <p class="texto_nav"> Navegue aqui</p> 
       </article>
 
        <article class="abas">
 
            <p class="mercado" id ="pag_mercado"><strong>Variedades</strong> </p> 
            
-          <a class="tagA_segundo_cabecalho"  href="pet.html">
+          <a class="tagA_segundo_cabecalho"  href="/home/pet">
                <p class="pet"><strong>Espaço pet</strong> </p>
           </a>
 
-          <a class="tagA_segundo_cabecalho"  href="/farmacia.html">
+          <a class="tagA_segundo_cabecalho"  href="/home/farmacia">
                <p class="farmacia"><strong>Farmácia </strong> </p>
           </a>
 
@@ -90,6 +91,39 @@
 
 
   </header>
+  
+  <section class="body_menu_hamburguer" ></section>
+  <div class="menu_hamburguer" id="menu_hamburguer">
+    
+    <ul>
+        <li class="lista_label_hambuerguer">
+          Variedades
+           <ul >
+            <a href="/variedades.html"> <li>Eletrônicos</li></a>
+            <a href="/variedades.html"> <li>Móveis</li></a>
+            <a href="/variedades.html"><li>Roupas</li></a>
+           </ul>
+        </li>
+
+        <li class="lista_label_hambuerguer" >Espaço pet
+            <ul >
+              <a href="pet.html"> <li>Gatos</li></a>
+              <a href="pet.html"><li>Cachorros</li></a>
+              <a href="pet.html"><li>Diversos</li></a> 
+            </ul>
+        </li>
+
+        <li class="lista_label_hambuerguer" >Farmácia
+            <ul >
+              <a href="farmacia.html"><li>Remédios</li></a>
+              <a href="farmacia.html"><li>Beleza</li></a>
+              <a href="farmacia.html"><li>Diversos</li></a>
+            </ul>
+        </li>
+
+    </ul>
+
+</div>
 
   <main>
 
@@ -108,19 +142,19 @@
 
           <!--inicio slide imagens---------------------------------------------------------------------------------->
           <div class="slide first">
-              <img src="/imagens/carrossell_imagem1_farmacia.png" alt="imagem 1">
+              <img src="/img/carrossell_imagem1_farmacia.png" alt="imagem 1">
           </div>
 
           <div class="slide">
-            <img src="imagens/carrossell_imagem2_farmacia.webp" alt="imagem 2">
+            <img src="/img/carrossell_imagem2_farmacia.webp" alt="imagem 2">
           </div>
 
           <div class="slide">
-            <img src="imagens/carrossel_imagem3_farmacia.png" alt="imagem 3">
+            <img src="/img/carrossel_imagem3_farmacia.png" alt="imagem 3">
           </div>
 
           <div class="slide">
-            <img src="/imagens/carrossell_imagem4_farmacia.png" alt="imagem 4">
+            <img src="/img/carrossell_imagem4_farmacia.png" alt="imagem 4">
           </div>
           <!--fim slide imagens--------------------------------------------------------------------------------------->
 
@@ -156,7 +190,7 @@
               <div class="products1">
                   <!--corpo com imagens e detalhes com texto etc...-->
                   <div>
-                    <img id="imgsize" src="/imagens/batata.PNG" alt="">
+                    <img id="imgsize" src="img/batata.PNG" alt="">
                     <ul class="description">
                       <li>Nome do produto</li>
                       <li>Preço</li>
@@ -166,7 +200,7 @@
                     <button type="submit" id="buttonCarrinho">Carrinho</button>
                   </div>
                   <div>
-                    <img id="imgsize" src="/imagens/biscoitorecheado.jpg" alt="">
+                    <img id="imgsize" src="img/biscoitorecheado.jpg" alt="">
                     <ul class="description">
                       <li>Nome do produto</li>
                       <li>Preço</li>
@@ -176,7 +210,7 @@
                     <button type="submit" id="buttonCarrinho">Carrinho</button>
                   </div>
                   <div>
-                    <img id="imgsize" src="/imagens/snackgato.PNG" alt="">
+                    <img id="imgsize" src="img/snackgato.PNG" alt="">
                     <ul class="description">
                       <li>Nome do produto</li>
                       <li>Preço</li>
@@ -189,7 +223,7 @@
     
               <div class="products2">
                 <div>
-                  <img id="imgsize" src="/imagens/bomar.PNG" alt="">
+                  <img id="imgsize" src="img/bomar.PNG" alt="">
                   <ul class="description">
                     <li>Nome do produto</li>
                     <li>Preço</li>
@@ -200,7 +234,7 @@
                 </div>
     
                 <div>
-                  <img id="imgsize" src="/imagens/desinfetante.PNG" alt="">
+                  <img id="imgsize" src="img/desinfetante.PNG" alt="">
                   <ul class="description">
                     <li>Nome do produto</li>
                     <li>Preço</li>
@@ -211,7 +245,7 @@
                 </div>
     
                 <div>
-                  <img id="imgsize" src="/imagens/oleo.PNG" alt="">
+                  <img id="imgsize" src="img/oleo.PNG" alt="">
                   <ul class="description">
                     <li>Nome do produto</li>
                     <li>Preço</li>
@@ -231,80 +265,11 @@
 </main>
 
 
+<%- include("../partials/footer") %> 
 
-<footer>
-
-  <section class="footer_all">
-
-    <article class="imagem_logo2">
-        <a href="/home.html">
-            <img class="imagem2" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  >
-        </a>
-    </article>
-
-  <!--Primeiro Artico---------------------------------------------------------------------------------------------->
-  <article class="lista_footer1">
-
-      <label class="label_footer" for="">Sobre o Grupo Seven </label>
-      <ul>
-          <li type = "none">
-            <a class="lista" href="">Quem Somos </a>
-          </li>
-
-          <li type = "none">
-            <a class="lista" class="Lista" href="">Nossas Lojas </a>
-          </li>
-
-          <li type = "none">
-            <a class="lista" class="Lista" href="">Trabalhe Conosco </a>
-          </li>
-
-          <li type = "none">
-            <a class="lista" href="">Dúvidas </a>
-          </li>
-      </ul>
-
-  </article>
-  <!--Fim Primeiro Artico---------------------------------------------------------------------------------------------->
-
-  <!--Segundo Artico---------------------------------------------------------------------------------------------->
-  <article class="lista_footer2">
-
-    <label class="label_footer" for="">Central de Atendimento </label>
-    <ul>
-        <li type = "none">
-          <a class="lista"href="">Anucie Seu Produto Aqui </a>
-        </li>
-
-        <li type = "none">
-          <a class="lista" href="">Política de Vendas </a>
-        </li>
-
-        <li type = "none">
-          <a class="lista" href="">Troca e Devolução </a>
-        </li>
-
-        <li type = "none">
-          <a class="lista" href="">Prazo e Entrega </a>
-        </li>
-    </ul>
-
-  </article>
-<!--Segundo Artico---------------------------------------------------------------------------------------------->
-
-  <article class="icones_footer">
-
-    <a href=""><i id="icone_footer_img" class="fa-brands fa-facebook"></i></a>
-    <a href=""><i id="icone_footer_img" class="fa-brands fa-instagram"></i></a>
-    <a href=""><i id="icone_footer_img" class="fa-brands fa-twitter"></i></a>
-
-  </article>
-  
-</section>
-
- </footer>
  
  <script src="/js/variedades.js"></script>
+ <script src="/js/menu_hamburguer.js"></script>
  
    <!--<div class="whatsapp">
   <p>Duvidas ?</p>
